--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -1,12 +1,16 @@
 <ion-header>
-    <ion-toolbar>
-      <ion-title>
-        Main Page
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-content class="ion-padding">
-    <p>Welcome to the main page!</p>
-  </ion-content>
-  
+  <ion-toolbar>
+    <ion-title>
+      Главная страница
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let contact of contacts">
+      <ion-label>{{ contact.displayName }}</ion-label>
+      <ion-label>{{ contact.phoneNumbers[0]?.value }}</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
